ms-card/src/main/java/com/example/mscard/error/ErrorCodes.java
package com.example.mscard.error;

public enum ErrorCodes {

    CARD_NOT_FOUND,
    CARD_EXISTS,
    INSUFFICIENT_BALANCE,
    EXPIRED_CARD,
    UNEXPECTED_ERROR
}
